--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -51,7 +51,7 @@
              </div>
              <div id="menu_nav">
                  <ul>
-                     <li class="menu_li" control="xiaomiphone">大米手机</li>
+                     <li class="menu_li" control="xiaomiphone">手机</li>
                      <li class="menu_li" control="hongmiphone">红米</li>
                      <li class="menu_li" control="pingban">平板</li>
                      <li class="menu_li" control="tv">电视&nbsp;&nbsp;盒子</li>
