--- a/src/main/web/datagrid/datagridDel.html
+++ b/src/main/web/datagrid/datagridDel.html
@@ -38,7 +38,7 @@
         <th>用户状态</th>
         <th>商品收藏</th>
         <th>消费总金额</th>
-
+        <th>操作</th>
     </tr>
     <tr>
         <td>1</td>
@@ -56,6 +56,7 @@
         <td>1</td>
         <td>0</td>
         <td>800</td>
+        <td><a href="#">删除</a></td>
     </tr>
     <tr>
         <td>2</td>
@@ -73,6 +74,7 @@
         <td>1</td>
         <td>1</td>
         <td>1000</td>
+        <td><a href="#">删除</a></td>
     </tr>
     <tr>
         <td>3</td>
@@ -90,6 +92,7 @@
         <td>1</td>
         <td>0</td>
         <td>999</td>
+        <td><a href="#">删除</a></td>
     </tr>
 
 </table>
