--- a/src/main/web/buttonedit/openwindow.html
+++ b/src/main/web/buttonedit/openwindow.html
@@ -2,25 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>查询用户</title>
+    <title>Title</title>
 </head>
 <body>
-<!--动态获取数据-->
-<!--<div id="datagrid1" class="mini-datagrid" style="width:700px;height:280px;"
-     url="../data/DataService.aspx?method=searchUser"  idField="id" allowResize="true"
->
-    <div property="columns">
-        <div type="indexcolumn" ></div>
-        <div field="userId" width="120" headerAlign="center" allowSort="true">员工帐号</div>
-        <div field="nickName" width="120" headerAlign="center" allowSort="true">昵称</div>
-        <div field="gender" width="100" renderer="onGenderRenderer" align="center" headerAlign="center">性别</div>
-        <div field="salary" width="100" allowSort="true">薪资</div>
-        <div field="age" width="100" allowSort="true">年龄</div>
-        <div field="createtime" width="100" headerAlign="center" dateFormat="yyyy-MM-dd" allowSort="true">创建日期</div>
-    </div>
-</div>-->
-
-<!-- 静态页面-->
 <table border="1px solid black"  style="margin: auto">
     <tr>
         <th>电商用户ID</th>
@@ -38,7 +22,7 @@
         <th>用户状态</th>
         <th>商品收藏</th>
         <th>消费总金额</th>
-
+        <th>操作</th>
     </tr>
     <tr>
         <td>1</td>
@@ -56,6 +40,7 @@
         <td>1</td>
         <td>0</td>
         <td>800</td>
+        <td><a href="#">修改</a></td>
     </tr>
     <tr>
         <td>2</td>
@@ -73,6 +58,7 @@
         <td>1</td>
         <td>1</td>
         <td>1000</td>
+        <td><a href="#">修改</a></td>
     </tr>
     <tr>
         <td>3</td>
@@ -90,9 +76,9 @@
         <td>1</td>
         <td>0</td>
         <td>999</td>
+        <td><a href="#">修改</a></td>
     </tr>
 
 </table>
-
 </body>
 </html>
