--- a/src/main/web/user/index.html
+++ b/src/main/web/user/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>绿顺商城后台管理系统</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <script src="../scripts/jquery-1.6.2.min.js" type="text/javascript"></script>
     <link href="/css/demo.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="/scripts/miniui/miniui.js"></script>
     <script src="/scripts/boot.js" type="text/javascript"></script>
@@ -17,6 +18,9 @@
         background:url(/img/header.gif) repeat-x 0 -1px;
     }
     </style>
+
+
+
 </head>
 <body>
 
@@ -42,19 +46,21 @@
         <div class="mini-splitter" style="width:100%;height:100%;" borderStyle="border:0;">
             <div size="180" maxSize="250" minSize="100" showCollapseButton="true" style="border:0;">
                 <!--OutlookTree-->
-                <div id="leftTree" class="mini-outlookmenu" onitemselect="onItemSelect"
+                <div id="leftTree" class="mini-outlookmenu" onitemselect="onItemselect"
                      idField="id" parentField="pid" textField="text">
                 </div>
 
             </div>
             <div showCollapseButton="false" style="border:0;">
                 <!--Tabs-->
-                <div id="mainTabs" class="mini-tabs" activeIndex="2" style="width:100%;height:100%;"
-                     plain="false" onactivechanged="onTabsActiveChanged"
-                >
-                    <div title="首页" url="../../docs/api/overview.html" >
-                    </div>
-                </div>
+
+
+                        <iframe class="RZ_form" scrolling="no" frameborder="0" style="width:100%;height:683px;">
+
+
+                        </iframe>
+
+
             </div>
         </div>
     </div>
@@ -72,7 +78,7 @@
 
             { id: "addUser", pid: "user", text: "增加用户", iconCls: "icon-add", url: "../navbartree/navbartree.html" },
             { id: "editUser", pid: "user", text: "修改用户", iconCls: "icon-edit", url: "../buttonedit/openwindow.html" },
-            { id: "removeUser", pid: "user", text: "删除用户", iconCls: "icon-remove", url: "../datagrid/datagrid.html" },
+            { id: "removeUser", pid: "user", text: "删除用户", iconCls: "icon-remove", url: "../datagrid/datagridDel.html" },
 
             { id: "right", text: "权限管理"},
             { id: "addRight", pid: "right", text: "查询权限", iconCls: "icon-search", url: "../navbartree/navbartree.html" },
@@ -92,11 +98,7 @@
         ];
         var menu1 = mini.get("leftTree");
         menu1.loadList(list, "id", "pid");
-
-
-
-        var tree = mini.get("leftTree");
-
+       var tree = mini.get("leftTree");
         function showTab(node) {
             var tabs = mini.get("mainTabs");
 
@@ -108,16 +110,17 @@
                 tab.name = id;
                 tab.title = node.text;
                 tab.showCloseButton = true;
-                tab.url = mini_JSPath + "../../docs/api/" + node.id + ".html";
+                tab.url = mini_JSPath + "../../docs/api/" +node.item.url + ".html";
 
                 tabs.addTab(tab);
             }
             tabs.activeTab(tab);
         }
 
-        function onNodeSelect(e) {
+        function onItemselect(e) {
             var node = e.node;
             var isLeaf = e.isLeaf;
+           $(".RZ_form").attr("src",e.item.url);
 
             if (isLeaf) {
                 showTab(node);
@@ -134,16 +137,16 @@
         }
 
         function onTabsActiveChanged(e) {
-            var tabs = e.sender;
-            var tab = tabs.getActiveTab();
-            if (tab && tab._nodeid) {
+                    var tabs = e.sender;
+                    var tab = tabs.getActiveTab();
+                    if (tab && tab._nodeid) {
 
-                var node = tree.getNode(tab._nodeid);
-                if (node && !tree.isSelectedNode(node)) {
-                    tree.selectNode(node);
-                }
-            }
-        }
+                        var node = tree.getNode(tab._nodeid);
+                        if (node && !tree.isSelectedNode(node)) {
+                            tree.selectNode(node);
+                        }
+                    }
+                    }
     </script>
 
 </body>
