--- a/src/main/web/datagrid/FileUpload.html
+++ b/src/main/web/datagrid/FileUpload.html
@@ -3,22 +3,21 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <script src="../scripts/jquery-1.6.2.min.js" type="text/javascript"></script>
-
     <script src="../scripts/ajaxfileupload.js" type="text/javascript"></script>
+
     <title>上传处理页面</title>
 </head>
 <body>
 
-<h3>通过ajax插件 ajaxfileupload.js 来异步上传文件</h3>
+<h3>异步上传文件</h3>
 <form name="form5" action="/" method="post" enctype="multipart/form-data">
     <input type="file" id="file_AjaxFile" name="file_AjaxFile">
     <input type="button" value="upload" onclick="fileUploadAjax()"/><span id="sp_AjaxFile"></span><br><br>
-    <!--上传进度：<span id="sp_fileUploadProgress">0%</span>-->
+
 </form>
 <script type="text/javascript">
     function fileUploadAjax() {
         if ($("#file_AjaxFile").val().length > 0) {
-          //  progressInterval=setInterval(getProgress,500);
             $.ajaxFileUpload({
                 url: '/FileUpload/fileUpload_ajax', //用于文件上传的服务器端请求地址
                 type: "post",
@@ -40,18 +39,7 @@
             alert("请选择文件!");
         }
     }
-   /* var progressInterval = null;
-    var i=0;
-    var getProgress=function (){
-        $.get("/FileUpload/fileUploadprogress",
-            {},
-            function (data) {
-                $("#sp_fileUploadProgress").html(i+++data);
-                if(data==100||i==100)
-                    clearInterval(progressInterval);
-            }
-        );
-    }*/
+
 </script>
 </body>
 </html>
