--- a/src/main/web/buttonedit/openwindow.html
+++ b/src/main/web/buttonedit/openwindow.html
@@ -1,84 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Pagination 分页表格</title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <script src="../scripts/boot.js" type="text/javascript"></script>
 </head>
 <body>
-<table border="1px solid black"  style="margin: auto">
-    <tr>
-        <th>电商用户ID</th>
-        <th>用户类别</th>
-        <th>账户</th>
-        <th>密码</th>
-        <th>昵称</th>
-        <th>邮箱</th>
-        <th>名称</th>
-        <th>手机号</th>
-        <th>配送地址</th>
-        <th>用户积分</th>
-        <th>用户等级</th>
-        <th>注册时间</th>
-        <th>用户状态</th>
-        <th>商品收藏</th>
-        <th>消费总金额</th>
-        <th>操作</th>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>1001</td>
-        <td>1</td>
-        <td>zhang1001</td>
-        <td>zhang1001</td>
-        <td>zhangsna@163.com</td>
-        <td>张三</td>
-        <td>15010458082</td>
-        <td>北京朝阳</td>
-        <td>12</td>
-        <td>2</td>
-        <td>20120212</td>
-        <td>1</td>
-        <td>0</td>
-        <td>800</td>
-        <td><a href="#">修改</a></td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>1002</td>
-        <td>2</td>
-        <td>1234</td>
-        <td>lisi</td>
-        <td>lisi@163.com</td>
-        <td>李四</td>
-        <td>15110458083</td>
-        <td>山东德州</td>
-        <td>20</td>
-        <td>3</td>
-        <td>20160308</td>
-        <td>1</td>
-        <td>1</td>
-        <td>1000</td>
-        <td><a href="#">修改</a></td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>1003</td>
-        <td>0</td>
-        <td>admin</td>
-        <td>admin666</td>
-        <td>admin666@163.com</td>
-        <td>admin</td>
-        <td>17600022106</td>
-        <td>江苏苏州</td>
-        <td>30</td>
-        <td>6</td>
-        <td>20171112</td>
-        <td>1</td>
-        <td>0</td>
-        <td>999</td>
-        <td><a href="#">修改</a></td>
-    </tr>
-
-</table>
+正在维护....
 </body>
 </html>
+
