--- a/src/main/web/datagrid/datagrid.html
+++ b/src/main/web/datagrid/datagrid.html
@@ -20,9 +20,9 @@
         <div type="users_columns" ></div>
         <div field="userId" width="120" headerAlign="center" allowSort="true">用户帐号</div>
         <div field="nickName" width="120" headerAlign="center" allowSort="true">昵称</div>
-        <div field="email" width="100" renderer="onGenderRenderer" align="center" headerAlign="center">邮箱</div>
-        <div field="phone" numberFormat="¥#,0.00" align="right" width="100" allowSort="true">手机号</div>
-        <div field="address" width="100" allowSort="true" decimalPlaces="2" dataType="float">地址</div>
+        <div field="email" width="100"  align="center" headerAlign="center">邮箱</div>
+        <div field="phone"  align="right" width="100" allowSort="true">手机号</div>
+        <div field="address" width="100" allowSort="true" headerAlign="center">地址</div>
         <div field="joindate" width="100" headerAlign="center" dateFormat="yyyy-MM-dd" allowSort="true">创建日期</div>
     </div>
 </div>
