--- a/src/main/web/datagrid/FileUpload.html
+++ b/src/main/web/datagrid/FileUpload.html
@@ -3,16 +3,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <script src="../scripts/jquery-1.6.2.min.js" type="text/javascript"></script>
-    <script src="../scripts/ajaxfileupload.js" type="text/javascript"></script>
-
+    <script src="../scripts/ajaxfileupload.js"></script>
     <title>上传处理页面</title>
+
 </head>
 <body>
 
 <h3>异步上传文件</h3>
-<form name="form5" action="/" method="post" enctype="multipart/form-data">
+<form name="form5"  method="post" enctype="multipart/form-data">
     <input type="file" id="file_AjaxFile" name="file_AjaxFile">
-    <input type="button" value="upload" onclick="fileUploadAjax()"/><span id="sp_AjaxFile"></span><br><br>
+    <input type="button" value="upload" onclick="fileUploadAjax()"/><span id="sp_AjaxFile"></span>
 
 </form>
 <script type="text/javascript">
