--- a/src/main/web/user/index.html
+++ b/src/main/web/user/index.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>绿顺商城后台管理系统</title>
+    <title>绿顺商城后台管理系统12</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <script src="../scripts/jquery-1.6.2.min.js" type="text/javascript"></script>
     <link href="/css/demo.css" rel="stylesheet" type="text/css" />
