--- a/src/main/web/user/index.html
+++ b/src/main/web/user/index.html
@@ -64,12 +64,13 @@
         var list = [
 
             { id: "user", text: "用户管理"},
-            { id: "searchUser", pid: "user", text: "操作用户", iconCls: "icon-search", url: "../datagrid/datagrid.jsp"},
+            { id: "searchUser", pid: "user", text: "查询用户", iconCls: "icon-search", url: "../datagrid/datagrid.jsp"},
 
 
             { id: "commmodity", text: "商品管理"},
             { id: "searchcommmodity", pid: "commmodity", text: "查询商品", iconCls: "icon-search", url: "../datagrid/datagridCommodity.jsp" },
 
+            {id:"filecommodity", pid:"commmodity",text:"文件上传", iconCls:"icon-upload", url:"../datagrid/FileUpload.html"},
 
             { id: "orderlist", text: "订单管理"},
             { id: "searchorderlist", pid: "orderlist", text: "查询订单", iconCls: "icon-search", url: "../datagrid/datagrid.html" },
