--- a/src/main/web/user/basic_gallery.html
+++ b/src/main/web/user/basic_gallery.html
@@ -111,14 +111,14 @@
 
 
     <!-- Peity -->
-    <script src="js/plugins/peity/jquery.peity.min.js"></script>
+    <script src="/js/plugins/peity/jquery.peity.min.js"></script>
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
     <!-- Fancy box -->
-    <script src="js/plugins/fancybox/jquery.fancybox.js"></script>
+    <script src="/js/plugins/fancybox/jquery.fancybox.js"></script>
 
 
     <script>
