--- a/src/main/web/user/calendar.html
+++ b/src/main/web/user/calendar.html
@@ -110,16 +110,16 @@
 
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
-    <script src="js/jquery-ui.custom.min.js"></script>
+    <script src="/js/jquery-ui.custom.min.js"></script>
 
     <!-- iCheck -->
-    <script src="js/plugins/iCheck/icheck.min.js"></script>
+    <script src="/js/plugins/iCheck/icheck.min.js"></script>
 
     <!-- Full Calendar -->
-    <script src="js/plugins/fullcalendar/fullcalendar.min.js"></script>
+    <script src="/js/plugins/fullcalendar/fullcalendar.min.js"></script>
 
     <script>
         $(document).ready(function () {
