--- a/src/main/web/user/form_advanced.html
+++ b/src/main/web/user/form_advanced.html
@@ -976,52 +976,52 @@
     </div>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
     <!-- Chosen -->
-    <script src="js/plugins/chosen/chosen.jquery.js"></script>
+    <script src="/js/plugins/chosen/chosen.jquery.js"></script>
 
     <!-- JSKnob -->
-    <script src="js/plugins/jsKnob/jquery.knob.js"></script>
+    <script src="/js/plugins/jsKnob/jquery.knob.js"></script>
 
     <!-- Input Mask-->
-    <script src="js/plugins/jasny/jasny-bootstrap.min.js"></script>
+    <script src="/js/plugins/jasny/jasny-bootstrap.min.js"></script>
 
     <!-- Data picker -->
-    <script src="js/plugins/datapicker/bootstrap-datepicker.js"></script>
+    <script src="/js/plugins/datapicker/bootstrap-datepicker.js"></script>
 
     <!-- Prettyfile -->
-    <script src="js/plugins/prettyfile/bootstrap-prettyfile.js"></script>
+    <script src="/js/plugins/prettyfile/bootstrap-prettyfile.js"></script>
 
     <!-- NouSlider -->
     <script src="js/plugins/nouslider/jquery.nouislider.min.js"></script>
 
     <!-- Switchery -->
-    <script src="js/plugins/switchery/switchery.js"></script>
+    <script src="/js/plugins/switchery/switchery.js"></script>
 
     <!-- IonRangeSlider -->
-    <script src="js/plugins/ionRangeSlider/ion.rangeSlider.min.js"></script>
+    <script src="/js/plugins/ionRangeSlider/ion.rangeSlider.min.js"></script>
 
     <!-- iCheck -->
-    <script src="js/plugins/iCheck/icheck.min.js"></script>
+    <script src="/js/plugins/iCheck/icheck.min.js"></script>
 
     <!-- MENU -->
-    <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
+    <script src="/js/plugins/metisMenu/jquery.metisMenu.js"></script>
 
     <!-- Color picker -->
-    <script src="js/plugins/colorpicker/bootstrap-colorpicker.min.js"></script>
+    <script src="/js/plugins/colorpicker/bootstrap-colorpicker.min.js"></script>
 
     <!-- Clock picker -->
-    <script src="js/plugins/clockpicker/clockpicker.js"></script>
+    <script src="/js/plugins/clockpicker/clockpicker.js"></script>
 
     <!-- Image cropper -->
-    <script src="js/plugins/cropper/cropper.min.js"></script>
+    <script src="/js/plugins/cropper/cropper.min.js"></script>
 
-    <script src="js/demo/form-advanced-demo.js"></script>
+    <script src="/js/demo/form-advanced-demo.js"></script>
 
 
     
