--- a/src/main/web/user/form_markdown.html
+++ b/src/main/web/user/form_markdown.html
@@ -74,17 +74,17 @@
     </div>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
     <!-- simditor -->
-    <script type="text/javascript" src="js/plugins/markdown/markdown.js"></script>
-    <script type="text/javascript" src="js/plugins/markdown/to-markdown.js"></script>
-    <script type="text/javascript" src="js/plugins/markdown/bootstrap-markdown.js"></script>
-    <script type="text/javascript" src="js/plugins/markdown/bootstrap-markdown.zh.js"></script>
+    <script type="text/javascript" src="/js/plugins/markdown/markdown.js"></script>
+    <script type="text/javascript" src="/js/plugins/markdown/to-markdown.js"></script>
+    <script type="text/javascript" src="/js/plugins/markdown/bootstrap-markdown.js"></script>
+    <script type="text/javascript" src="/js/plugins/markdown/bootstrap-markdown.zh.js"></script>
 
 
     
