--- a/src/main/web/user/form_webuploader.html
+++ b/src/main/web/user/form_webuploader.html
@@ -97,13 +97,13 @@
 
     </div>
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
 
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
     <!-- Web Uploader -->
@@ -111,9 +111,9 @@
         // 添加全局站点信息
         var BASE_URL = 'js/plugins/webuploader';
     </script>
-    <script src="js/plugins/webuploader/webuploader.min.js"></script>
+    <script src="/js/plugins/webuploader/webuploader.min.js"></script>
 
-    <script src="js/demo/webuploader-demo.js"></script>
+    <script src="/js/demo/webuploader-demo.js"></script>
 
     
     
