--- a/src/main/web/user/graph_echarts.html
+++ b/src/main/web/user/graph_echarts.html
@@ -338,20 +338,20 @@
         </div>
     </div>
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
 
 
     <!-- ECharts -->
-    <script src="js/plugins/echarts/echarts-all.js"></script>
+    <script src="/js/plugins/echarts/echarts-all.js"></script>
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
     <!-- ECharts demo data -->
-    <script src="js/demo/echarts-demo.js"></script>
+    <script src="/js/demo/echarts-demo.js"></script>
 
     
     
