--- a/src/main/web/user/graph_morris.html
+++ b/src/main/web/user/graph_morris.html
@@ -171,21 +171,21 @@
 
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
 
 
     <!-- Morris -->
-    <script src="js/plugins/morris/raphael-2.1.0.min.js"></script>
-    <script src="js/plugins/morris/morris.js"></script>
+    <script src="/js/plugins/morris/raphael-2.1.0.min.js"></script>
+    <script src="/js/plugins/morris/morris.js"></script>
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
     <!-- Morris demo data-->
-    <script src="js/demo/morris-demo.js"></script>
+    <script src="/js/demo/morris-demo.js"></script>
 
     
     
