--- a/src/main/web/user/graph_sparkline.html
+++ b/src/main/web/user/graph_sparkline.html
@@ -191,20 +191,20 @@
     </div>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
 
 
     <!-- Sparkline -->
-    <script src="js/plugins/sparkline/jquery.sparkline.min.js"></script>
+    <script src="/js/plugins/sparkline/jquery.sparkline.min.js"></script>
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
     <!-- Sparkline demo data -->
-    <script src="js/demo/sparkline-demo.js"></script>
+    <script src="/js/demo/sparkline-demo.js"></script>
 
     
     
