--- a/src/main/web/user/layer.html
+++ b/src/main/web/user/layer.html
@@ -256,15 +256,15 @@ $.getJSON('js/demo/photos.json', function(json){
     </div>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
     <!-- layer javascript -->
-    <script src="js/plugins/layer/layer.min.js"></script>
+    <script src="/js/plugins/layer/layer.min.js"></script>
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
-    <script src="js/demo/layer-demo.js"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
+    <script src="/js/demo/layer-demo.js"></script>
 
     
     
