--- a/src/main/web/user/social_feed.html
+++ b/src/main/web/user/social_feed.html
@@ -398,7 +398,7 @@
 
                     <div class="social-avatar">
                         <a href="">
-                            <img alt="image" src="img/a8.jpg">
+                            <img alt="image" src="/img/a8.jpg">
                         </a>
                     </div>
 
@@ -529,13 +529,13 @@
     </div>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
 
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
     
