--- a/src/main/web/user/toastr_notifications.html
+++ b/src/main/web/user/toastr_notifications.html
@@ -238,17 +238,17 @@ toastr.options = {
 
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
 
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
     <!-- Toastr script -->
-    <script src="js/plugins/toastr/toastr.min.js"></script>
+    <script src="/js/plugins/toastr/toastr.min.js"></script>
 
     <script type="text/javascript">
         $(function () {
