--- a/src/main/web/user/agile_board.html
+++ b/src/main/web/user/agile_board.html
@@ -208,12 +208,12 @@
     </div>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
-    <script src="js/jquery-ui-1.10.4.min.js"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery-ui-1.10.4.min.js"></script>
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
     <script>
         $(document).ready(function () {
