--- a/src/main/web/user/blueimp.html
+++ b/src/main/web/user/blueimp.html
@@ -95,14 +95,14 @@
     </div>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
     <!-- blueimp gallery -->
-    <script src="js/plugins/blueimp/jquery.blueimp-gallery.min.js"></script>
+    <script src="/js/plugins/blueimp/jquery.blueimp-gallery.min.js"></script>
 
     
     
