--- a/src/main/web/user/code_editor.html
+++ b/src/main/web/user/code_editor.html
@@ -102,18 +102,18 @@ function VoiceCtrl($scope) {
     </div>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
     <!-- Peity -->
-    <script src="js/plugins/peity/jquery.peity.min.js"></script>
+    <script src="/js/plugins/peity/jquery.peity.min.js"></script>
 
     <!-- CodeMirror -->
-    <script src="js/plugins/codemirror/codemirror.js"></script>
-    <script src="js/plugins/codemirror/mode/javascript/javascript.js"></script>
+    <script src="/js/plugins/codemirror/codemirror.js"></script>
+    <script src="/js/plugins/codemirror/mode/javascript/javascript.js"></script>
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
     <script>
         $(document).ready(function () {
