--- a/src/main/web/user/css_animation.html
+++ b/src/main/web/user/css_animation.html
@@ -166,21 +166,21 @@
 
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
 
 
     <!-- Peity -->
-    <script src="js/plugins/peity/jquery.peity.min.js"></script>
+    <script src="/js/plugins/peity/jquery.peity.min.js"></script>
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
     <!-- Rickshaw -->
-    <script src="js/plugins/rickshaw/vendor/d3.v3.js"></script>
-    <script src="js/plugins/rickshaw/rickshaw.min.js"></script>
+    <script src="/js/plugins/rickshaw/vendor/d3.v3.js"></script>
+    <script src="/js/plugins/rickshaw/rickshaw.min.js"></script>
 
 
     <script>
