--- a/src/main/web/user/diff.html
+++ b/src/main/web/user/diff.html
@@ -88,17 +88,17 @@
         </div>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
     <!-- Diff march patch -->
-    <script src="js/plugins/diff_match_patch/diff_match_patch.js"></script>
+    <script src="/js/plugins/diff_match_patch/diff_match_patch.js"></script>
 
     <!-- jQuery pretty text diff -->
-    <script src="js/plugins/preetyTextDiff/jquery.pretty-text-diff.min.js"></script>
+    <script src="/js/plugins/preetyTextDiff/jquery.pretty-text-diff.min.js"></script>
 
     <script>
 
