--- a/src/main/web/user/form_file_upload.html
+++ b/src/main/web/user/form_file_upload.html
@@ -61,17 +61,17 @@
     </div>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
 
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
     <!-- DROPZONE -->
-    <script src="js/plugins/dropzone/dropzone.js"></script>
+    <script src="/js/plugins/dropzone/dropzone.js"></script>
 
 
     <script>
