--- a/src/main/web/user/form_simditor.html
+++ b/src/main/web/user/form_simditor.html
@@ -88,20 +88,20 @@
     </div>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
 
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
     <!-- simditor -->
-    <script type="text/javascript" src="js/plugins/simditor/module.js"></script>
-    <script type="text/javascript" src="js/plugins/simditor/uploader.js"></script>
-    <script type="text/javascript" src="js/plugins/simditor/hotkeys.js"></script>
-    <script type="text/javascript" src="js/plugins/simditor/simditor.js"></script>
+    <script type="text/javascript" src="/js/plugins/simditor/module.js"></script>
+    <script type="text/javascript" src="/js/plugins/simditor/uploader.js"></script>
+    <script type="text/javascript" src="/js/plugins/simditor/hotkeys.js"></script>
+    <script type="text/javascript" src="/js/plugins/simditor/simditor.js"></script>
     <script>
         $(document).ready(function () {
             var editor = new Simditor({
