--- a/src/main/web/user/graph_rickshaw.html
+++ b/src/main/web/user/graph_rickshaw.html
@@ -227,21 +227,21 @@
 
     </div>
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
 
 
     <!-- Rickshaw -->
-    <script src="js/plugins/rickshaw/vendor/d3.v3.js"></script>
-    <script src="js/plugins/rickshaw/rickshaw.min.js"></script>
+    <script src="/js/plugins/rickshaw/vendor/d3.v3.js"></script>
+    <script src="/js/plugins/rickshaw/rickshaw.min.js"></script>
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
     <!-- Rickshaw demo data -->
-    <script src="js/demo/rickshaw-demo.js"></script>
+    <script src="/js/demo/rickshaw-demo.js"></script>
 
     
     
