--- a/src/main/web/user/iconfont.html
+++ b/src/main/web/user/iconfont.html
@@ -46,7 +46,7 @@
                             <div class="ibox-content">
                                 <div class="col-md-8 col-md-offset-2 m-t m-b">
                                     <p class="text-center">
-                                        <img src="img/iconfont-logo.png">
+                                        <img src="/img/iconfont-logo.png">
                                     </p>
                                     <form action="http://www.iconfont.cn/search" target="_blank">
                                         <div class="input-group">
@@ -116,13 +116,13 @@
 
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
 
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
 
