--- a/src/main/web/user/jstree.html
+++ b/src/main/web/user/jstree.html
@@ -145,17 +145,17 @@
 
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
 
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
     <!-- jsTree plugin javascript -->
-    <script src="js/plugins/jsTree/jstree.min.js"></script>
+    <script src="/js/plugins/jsTree/jstree.min.js"></script>
 
     <style>
         .jstree-open > .jstree-anchor > .fa-folder:before {
