--- a/src/main/web/user/nestable_list.html
+++ b/src/main/web/user/nestable_list.html
@@ -164,17 +164,17 @@
     </div>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
 
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
     <!-- Nestable List -->
-    <script src="js/plugins/nestable/jquery.nestable.js"></script>
+    <script src="/js/plugins/nestable/jquery.nestable.js"></script>
     <script>
         $(document).ready(function () {
 
