--- a/src/main/web/user/plyr.html
+++ b/src/main/web/user/plyr.html
@@ -176,17 +176,17 @@
     </script>
 
     <!-- Plyr core script -->
-    <script src="js/plugins/plyr/plyr.js"></script>
+    <script src="/js/plugins/plyr/plyr.js"></script>
     <script>
         plyr.setup();
     </script>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
     
