--- a/src/main/web/user/profile.html
+++ b/src/main/web/user/profile.html
@@ -28,7 +28,7 @@
                     </div>
                     <div>
                         <div class="ibox-content no-padding border-left-right">
-                            <img alt="image" class="img-responsive" src="img/profile_big.jpg">
+                            <img alt="image" class="img-responsive" src="/img/profile_big.jpg">
                         </div>
                         <div class="ibox-content profile-content">
                             <h4><strong>Beaut-zihan</strong></h4>
@@ -96,7 +96,7 @@
 
                                 <div class="feed-element">
                                     <a href="profile.html#" class="pull-left">
-                                        <img alt="image" class="img-circle" src="img/a1.jpg">
+                                        <img alt="image" class="img-circle" src="/img/a1.jpg">
                                     </a>
                                     <div class="media-body ">
                                         <small class="pull-right text-navy">1天前</small>
@@ -112,7 +112,7 @@
 
                                 <div class="feed-element">
                                     <a href="profile.html#" class="pull-left">
-                                        <img alt="image" class="img-circle" src="img/profile.jpg">
+                                        <img alt="image" class="img-circle" src="/img/profile.jpg">
                                     </a>
                                     <div class="media-body ">
                                         <small class="pull-right">5分钟前</small>
@@ -125,7 +125,7 @@
 
                                 <div class="feed-element">
                                     <a href="profile.html#" class="pull-left">
-                                        <img alt="image" class="img-circle" src="img/a2.jpg">
+                                        <img alt="image" class="img-circle" src="/img/a2.jpg">
                                     </a>
                                     <div class="media-body ">
                                         <small class="pull-right">2小时前</small>
@@ -144,7 +144,7 @@
                                 </div>
                                 <div class="feed-element">
                                     <a href="profile.html#" class="pull-left">
-                                        <img alt="image" class="img-circle" src="img/a3.jpg">
+                                        <img alt="image" class="img-circle" src="/img/a3.jpg">
                                     </a>
                                     <div class="media-body ">
                                         <small class="pull-right">2天前</small>
@@ -153,17 +153,17 @@
                                         <small class="text-muted">11月7日 11:56 来自 微博 weibo.com</small>
                                         <div class="photos">
                                             <a target="_blank" href="http://24.media.tumblr.com/20a9c501846f50c1271210639987000f/tumblr_n4vje69pJm1st5lhmo1_1280.jpg">
-                                                <img alt="image" class="feed-photo" src="img/p1.jpg">
+                                                <img alt="image" class="feed-photo" src="/img/p1.jpg">
                                             </a>
                                             <a target="_blank" href="http://37.media.tumblr.com/9afe602b3e624aff6681b0b51f5a062b/tumblr_n4ef69szs71st5lhmo1_1280.jpg">
-                                                <img alt="image" class="feed-photo" src="img/p3.jpg">
+                                                <img alt="image" class="feed-photo" src="/img/p3.jpg">
                                             </a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="feed-element">
                                     <a href="profile.html#" class="pull-left">
-                                        <img alt="image" class="img-circle" src="img/a4.jpg">
+                                        <img alt="image" class="img-circle" src="/img/a4.jpg">
                                     </a>
                                     <div class="media-body ">
                                         <small class="pull-right text-navy">5小时前</small>
@@ -191,20 +191,20 @@
     </div>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
 
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
     <!-- Peity -->
-    <script src="js/plugins/peity/jquery.peity.min.js"></script>
+    <script src="/js/plugins/peity/jquery.peity.min.js"></script>
 
     <!-- Peity -->
-    <script src="js/demo/peity-demo.js"></script>
+    <script src="/js/demo/peity-demo.js"></script>
 
     
     
