--- a/src/main/web/user/project_detail.html
+++ b/src/main/web/user/project_detail.html
@@ -63,19 +63,19 @@
                                     <dt>团队成员：</dt>
                                     <dd class="project-people">
                                         <a href="project_detail.html">
-                                            <img alt="image" class="img-circle" src="img/a3.jpg">
+                                            <img alt="image" class="img-circle" src="/img/a3.jpg">
                                         </a>
                                         <a href="project_detail.html">
-                                            <img alt="image" class="img-circle" src="img/a1.jpg">
+                                            <img alt="image" class="img-circle" src="/img/a1.jpg">
                                         </a>
                                         <a href="project_detail.html">
-                                            <img alt="image" class="img-circle" src="img/a2.jpg">
+                                            <img alt="image" class="img-circle" src="/img/a2.jpg">
                                         </a>
                                         <a href="project_detail.html">
-                                            <img alt="image" class="img-circle" src="img/a4.jpg">
+                                            <img alt="image" class="img-circle" src="/img/a4.jpg">
                                         </a>
                                         <a href="project_detail.html">
-                                            <img alt="image" class="img-circle" src="img/a5.jpg">
+                                            <img alt="image" class="img-circle" src="/img/a5.jpg">
                                         </a>
                                     </dd>
                                 </dl>
@@ -115,7 +115,7 @@
                                                 <div class="feed-activity-list">
                                                     <div class="feed-element">
                                                         <a href="profile.html#" class="pull-left">
-                                                            <img alt="image" class="img-circle" src="img/a1.jpg">
+                                                            <img alt="image" class="img-circle" src="/img/a1.jpg">
                                                         </a>
                                                         <div class="media-body ">
                                                             <small class="pull-right text-navy">1天前</small>
@@ -131,7 +131,7 @@
 
                                                     <div class="feed-element">
                                                         <a href="profile.html#" class="pull-left">
-                                                            <img alt="image" class="img-circle" src="img/profile.jpg">
+                                                            <img alt="image" class="img-circle" src="/img/profile.jpg">
                                                         </a>
                                                         <div class="media-body ">
                                                             <small class="pull-right">5分钟前</small>
@@ -144,7 +144,7 @@
 
                                                     <div class="feed-element">
                                                         <a href="profile.html#" class="pull-left">
-                                                            <img alt="image" class="img-circle" src="img/a2.jpg">
+                                                            <img alt="image" class="img-circle" src="/img/a2.jpg">
                                                         </a>
                                                         <div class="media-body ">
                                                             <small class="pull-right">2小时前</small>
@@ -163,7 +163,7 @@
                                                     </div>
                                                     <div class="feed-element">
                                                         <a href="profile.html#" class="pull-left">
-                                                            <img alt="image" class="img-circle" src="img/a3.jpg">
+                                                            <img alt="image" class="img-circle" src="/img/a3.jpg">
                                                         </a>
                                                         <div class="media-body ">
                                                             <small class="pull-right">2天前</small>
@@ -172,17 +172,17 @@
                                                             <small class="text-muted">11月7日 11:56 来自 微博 weibo.com</small>
                                                             <div class="photos">
                                                                 <a target="_blank" href="http://24.media.tumblr.com/20a9c501846f50c1271210639987000f/tumblr_n4vje69pJm1st5lhmo1_1280.jpg">
-                                                                    <img alt="image" class="feed-photo" src="img/p1.jpg">
+                                                                    <img alt="image" class="feed-photo" src="/img/p1.jpg">
                                                                 </a>
                                                                 <a target="_blank" href="http://37.media.tumblr.com/9afe602b3e624aff6681b0b51f5a062b/tumblr_n4ef69szs71st5lhmo1_1280.jpg">
-                                                                    <img alt="image" class="feed-photo" src="img/p3.jpg">
+                                                                    <img alt="image" class="feed-photo" src="/img/p3.jpg">
                                                                 </a>
                                                             </div>
                                                         </div>
                                                     </div>
                                                     <div class="feed-element">
                                                         <a href="profile.html#" class="pull-left">
-                                                            <img alt="image" class="img-circle" src="img/a4.jpg">
+                                                            <img alt="image" class="img-circle" src="/img/a4.jpg">
                                                         </a>
                                                         <div class="media-body ">
                                                             <small class="pull-right text-navy">5小时前</small>
@@ -291,7 +291,7 @@
         <div class="col-sm-3">
             <div class="wrapper wrapper-content project-manager">
                 <h4>项目描述</h4>
-                <img src="img/wenku_logo.png" class="img-responsive">
+                <img src="/img/wenku_logo.png" class="img-responsive">
                 <p class="small">
                     <br>在线互动式文档分享平台，在这里，您可以和千万网友分享自己手中的文档，全文阅读其他用户的文档，同时，也可以利用分享文档获取的积分下载文档
                 </p>
@@ -327,13 +327,13 @@
     </div>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
 
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
     <script>
