--- a/src/main/web/user/sweetalert.html
+++ b/src/main/web/user/sweetalert.html
@@ -90,14 +90,14 @@ $('.demo3').click(function () {
         </div>
     </div>
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
     <!-- Sweet alert -->
-    <script src="js/plugins/sweetalert/sweetalert.min.js"></script>
+    <script src="/js/plugins/sweetalert/sweetalert.min.js"></script>
 
     <script>
         $(document).ready(function () {
