--- a/src/main/web/user/timeline.html
+++ b/src/main/web/user/timeline.html
@@ -154,20 +154,20 @@
     </div>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
 
 
     <!-- Peity -->
-    <script src="js/plugins/peity/jquery.peity.min.js"></script>
+    <script src="/js/plugins/peity/jquery.peity.min.js"></script>
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
     <!-- Peity -->
-    <script src="js/demo/peity-demo.js"></script>
+    <script src="/js/demo/peity-demo.js"></script>
 
     
     
