--- a/src/main/web/user/tree_view.html
+++ b/src/main/web/user/tree_view.html
@@ -386,16 +386,16 @@
     </div>
 
     <!-- 全局js -->
-    <script src="js/jquery.min.js?v=2.1.4"></script>
-    <script src="js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="/js/jquery.min.js?v=2.1.4"></script>
+    <script src="/js/bootstrap.min.js?v=3.3.6"></script>
 
     <!-- 自定义js -->
-    <script src="js/content.js?v=1.0.0"></script>
+    <script src="/js/content.js?v=1.0.0"></script>
 
 
     <!-- Bootstrap-Treeview plugin javascript -->
-    <script src="js/plugins/treeview/bootstrap-treeview.js"></script>
-    <script src="js/demo/treeview-demo.js"></script>
+    <script src="/js/plugins/treeview/bootstrap-treeview.js"></script>
+    <script src="/js/demo/treeview-demo.js"></script>
 
     
     
