--- a/src/main/web/user/widgets.html
+++ b/src/main/web/user/widgets.html
@@ -207,7 +207,7 @@
                             </h2>
                         <small>项目经理</small>
                     </div>
-                    <img src="img/a4.jpg" class="img-circle circle-border m-b-md" alt="profile">
+                    <img src="/img/a4.jpg" class="img-circle circle-border m-b-md" alt="profile">
                     <div>
                         <span>100 动态</span> |
                         <span>350 关注</span> |
@@ -549,16 +549,16 @@
 
 
     <!-- iCheck -->
-    <script src="js/plugins/iCheck/icheck.min.js"></script>
+    <script src="/js/plugins/iCheck/icheck.min.js"></script>
 
     <!-- Jvectormap -->
-    <script src="js/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-    <script src="js/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+    <script src="/js/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
+    <script src="/js/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
 
     <!-- Flot -->
-    <script src="js/plugins/flot/jquery.flot.js"></script>
-    <script src="js/plugins/flot/jquery.flot.tooltip.min.js"></script>
-    <script src="js/plugins/flot/jquery.flot.resize.js"></script>
+    <script src="/js/plugins/flot/jquery.flot.js"></script>
+    <script src="/js/plugins/flot/jquery.flot.tooltip.min.js"></script>
+    <script src="/js/plugins/flot/jquery.flot.resize.js"></script>
     <script>
         $(document).ready(function () {
             var d1 = [[1262304000000, 6], [1264982400000, 3057], [1267401600000, 20434], [1270080000000, 31982], [1272672000000, 26602], [1275350400000, 27826], [1277942400000, 24302], [1280620800000, 24237], [1283299200000, 21004], [1285891200000, 12144], [1288569600000, 10577], [1291161600000, 10295]];
