--- a/src/main/web/user/datagridComm.html
+++ b/src/main/web/user/datagridComm.html
@@ -41,20 +41,20 @@
                 </button>
             </td>
 
-            <td>{{comm.cId}}</td>
-            <td>{{comm.cName}}</td>
+            <td>{{comm.c_id}}</td>
+            <td>{{comm.c_name}}</td>
             <td>{{ comm.brand }}</td>
             <td>{{comm.picture}}</td>
-            <td>{{comm.normalPrice}}</td>
-            <td>{{ comm.retailPrice }}</td>
-            <td>{{comm.cState}}</td>
+            <td>{{comm.normal_price}}</td>
+            <td>{{ comm.retail_price }}</td>
+            <td>{{comm.c_state}}</td>
             <td>{{comm.introduce}}</td>
-            <td>{{comm.propertys}}</td>
+            <td>{{comm.property}}</td>
             <td>{{ comm.label }}</td>
             <td>{{ comm.inventory }}</td>
-            <td>{{ comm.broadHeading }}</td>
+            <td>{{ comm.broad_heading }}</td>
             <td>{{ comm.subclass }}</td>
-            <td>{{ comm.cDate }}</td>
+            <td>{{ comm.cdate }}</td>
             <td><a href="#">删除</a></td>
         </tr>
         </tbody>
