--- a/src/main/web/user/datagrid.html
+++ b/src/main/web/user/datagrid.html
@@ -41,12 +41,12 @@
                 </button>
             </td>
 
-            <td>{{user.userId}}</td>
+            <td>{{user.user_id}}</td>
             <td>{{user.type}}</td>
             <td>{{ user.password }}</td>
-            <td>{{user.nickName}}</td>
+            <td>{{user.nickname}}</td>
             <td>{{user.email}}</td>
-            <td>{{ user.userName }}</td>
+            <td>{{ user.username }}</td>
             <td>{{user.phone}}</td>
             <td>{{user.address}}</td>
             <td>{{user.integral}}</td>
