--- a/src/main/web/user/datagridOrder.html
+++ b/src/main/web/user/datagridOrder.html
@@ -45,24 +45,24 @@
                 </button>
             </td>
 
-            <td>{{order.oId}}</td>
-            <td>{{order.cId}}</td>
-            <td>{{order.oName}}</td>
-            <td>{{ order.oProperty }}</td>
-            <td>{{order.cNumber}}</td>
+            <td>{{order.o_id}}</td>
+            <td>{{order.c_id}}</td>
+            <td>{{order.o_oame}}</td>
+            <td>{{ order.o_property }}</td>
+            <td>{{order.c_number}}</td>
             <td>{{order.deliveryCosts}}</td>
             <td>{{ order.money }}</td>
-            <td>{{order.oState}}</td>
-            <td>{{order.userId}}</td>
+            <td>{{order.o_state}}</td>
+            <td>{{order.user_id}}</td>
             <td>{{order.address}}</td>
-            <td>{{ order.sMethod }}</td>
+            <td>{{ order.s_method }}</td>
             <td>{{ order.popayMent }}</td>
             <td>{{ order.presentExp }}</td>
-            <td>{{ order.oxdDate }}</td>
-            <td>{{ order.osongDate }}</td>
-            <td>{{ order.oshDate }}</td>
-            <td>{{ order.ofkDate }}</td>
-            <td>{{ order.orderTime }}</td>
+            <td>{{ order.oxd_date }}</td>
+            <td>{{ order.osong_date }}</td>
+            <td>{{ order.osh_date }}</td>
+            <td>{{ order.ofk_date }}</td>
+            <td>{{ order.order_time }}</td>
 
             <td><a href="#">删除</a></td>
         </tr>
