--- a/src/main/web/user/index_v1.html
+++ b/src/main/web/user/index_v1.html
@@ -237,11 +237,11 @@
                                                         </div>
                                                 </td>
                                                 <td class="project-people">
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a3.jpg"></a>
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a1.jpg"></a>
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a2.jpg"></a>
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a4.jpg"></a>
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a5.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a3.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a1.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a2.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a4.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a5.jpg"></a>
                                                 </td>
                                                 <td class="project-actions">
                                                     <a href="projects.html#" class="btn btn-white btn-sm"><i class="fa fa-folder"></i> 查看 </a>
@@ -264,9 +264,9 @@
                                                     </div>
                                                 </td>
                                                 <td class="project-people">
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a7.jpg"></a>
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a6.jpg"></a>
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a3.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a7.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a6.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a3.jpg"></a>
                                                 </td>
                                                 <td class="project-actions">
                                                     <a href="projects.html#" class="btn btn-white btn-sm"><i class="fa fa-folder"></i> 查看 </a>
@@ -289,13 +289,13 @@
                                                     </div>
                                                 </td>
                                                 <td class="project-people">
-<<<<<<< HEAD
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a5.jpg"></a>
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a3.jpg"></a>
-=======
+
                                                     <a href="projects.html"><img alt="image" class="img-circle" src="/img/a5.jpg"></a>
                                                     <a href="projects.html"><img alt="image" class="img-circle" src="/img/a3.jpg"></a>
->>>>>>> 7c55caa215d468fcc4ae8302a28a57020b88adb7
+
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a5.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a3.jpg"></a>
+
                                                 </td>
                                                 <td class="project-actions">
                                                     <a href="projects.html#" class="btn btn-white btn-sm"><i class="fa fa-folder"></i> 查看 </a>
@@ -318,10 +318,10 @@
                                                     </div>
                                                 </td>
                                                 <td class="project-people">
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a2.jpg"></a>
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a3.jpg"></a>
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a1.jpg"></a>
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a7.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a2.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a3.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a1.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a7.jpg"></a>
                                                 </td>
                                                 <td class="project-actions">
                                                     <a href="projects.html#" class="btn btn-white btn-sm"><i class="fa fa-folder"></i> 查看 </a>
@@ -344,7 +344,7 @@
                                                     </div>
                                                 </td>
                                                 <td class="project-people">
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a4.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a4.jpg"></a>
                                                 </td>
                                                 <td class="project-actions">
                                                     <a href="projects.html#" class="btn btn-white btn-sm"><i class="fa fa-folder"></i> 查看 </a>
@@ -367,10 +367,10 @@
                                                     </div>
                                                 </td>
                                                 <td class="project-people">
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a1.jpg"></a>
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a2.jpg"></a>
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a4.jpg"></a>
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a5.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a1.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a2.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a4.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a5.jpg"></a>
                                                 </td>
                                                 <td class="project-actions">
                                                     <a href="projects.html#" class="btn btn-white btn-sm"><i class="fa fa-folder"></i> 查看 </a>
@@ -393,9 +393,9 @@
                                                     </div>
                                                 </td>
                                                 <td class="project-people">
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a7.jpg"></a>
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a6.jpg"></a>
-                                                    <a href="projects.html"><img alt="image" class="img-circle" src="img/a3.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a7.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a6.jpg"></a>
+                                                    <a href="projects.html"><img alt="image" class="img-circle" src="/img/a3.jpg"></a>
                                                 </td>
                                                 <td class="project-actions">
                                                     <a href="projects.html#" class="btn btn-white btn-sm"><i class="fa fa-folder"></i> 查看 </a>
