--- a/src/main/web/user/addComm.html
+++ b/src/main/web/user/addComm.html
@@ -3,18 +3,180 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="shortcut icon" href="favicon.ico"> <link href="/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
+    <link href="/css/font-awesome.css?v=4.4.0" rel="stylesheet">
+    <link href="/css/plugins/iCheck/custom.css" rel="stylesheet">
+    <link href="/css/animate.css" rel="stylesheet">
+    <link href="/css/style.css?v=4.1.0" rel="stylesheet">
+
 </head>
 <body ng-app="myApp" ng-controller="CommodityController" >
-<form >
-    商品ID<input ng-model="c_id" type="text" id="c_id" name="c_id" n ><br>
-    商品名称<input type="text" id="c_name" name="c_name" ng-model="c_name"><br>
-    商品品牌<input type="text" id="brand" name="brand" ng-model="brand"><br>
-    正常价格<input type="text" id="normal_price" name="normal_price" ng-model="normal_price">
-    <input type="submit" value="tj">
+ <div class="row">
+    <div class="col-sm-12">
+        <div class="ibox float-e-margins">
+            <div class="ibox-title">
+                <h5>添加商品 <small></small></h5>
+                <div class="ibox-tools">
+                    <a class="collapse-link">
+                        <i class="fa fa-chevron-up"></i>
+                    </a>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="form_basic.html#">
+                        <i class="fa fa-wrench"></i>
+                    </a>
+                    <ul class="dropdown-menu dropdown-user">
+                        <li><a href="form_basic.html#">选项1</a>
+                        </li>
+                        <li><a href="form_basic.html#">选项2</a>
+                        </li>
+                    </ul>
+                    <a class="close-link">
+                        <i class="fa fa-times"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="ibox-content">
+                <form method="get" class="form-horizontal">
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">商品编号</label>
 
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" ng-model="c_id">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">商品名称</label>
 
-</form>
-<script>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" ng-model="c_name">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">商品品牌</label>
+
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" ng-model="brand">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">商品图片</label>
+
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" ng-model="picture">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">正常价格</label>
+
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" ng-model="normal_price">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">零售价格</label>
+
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" ng-model="retail_price">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">商品状态
+                            <br/>
+
+                        </label>
+
+                        <div class="col-sm-10">
+                            <div class="radio">
+                                <label>
+                                    <input type="radio" checked="" value="1" id="optionsRadios1" name="optionsRadios">选项1</label>
+                            </div>
+                            <div class="radio">
+                                <label>
+                                    <input type="radio" value="2" id="optionsRadios2" name="optionsRadios">选项2</label>
+                            </div>
+                        </div>
+
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">商品介绍</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control"> <span class="help-block m-b-none" ng-model="introduce"></span>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">商品属性</label>
+
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" ng-model="property">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">商品标签</label>
+
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" ng-model="label">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">商品库存</label>
+
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" ng-model="inventory">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">商品大类</label>
+
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" ng-model="broad_heading">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">商品子类别</label>
+
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" ng-model="subclass">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">商品子类别</label>
+
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" ng-model="subclass">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">商品创建时间：</label>
+                            <div class="col-sm-10">
+                                <input class="form-control layer-date" ng-model="cdate" placeholder="YYYY-MM-DD hh:mm:ss" onclick="laydate({istime: true, format: 'YYYY-MM-DD hh:mm:ss'})">
+                                <label class="laydate-icon"></label>
+                            </div>
+                        </div>
+                    <div class="hr-line-dashed"></div>
+                    <div class="form-group">
+                        <div class="col-sm-4 col-sm-offset-2">
+                            <button class="btn btn-primary" type="submit">保存内容</button>
+                            <button class="btn btn-white" type="submit">取消</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+    <script>
     var app = angular.module('myApp', []);
     app.controller('CommodityController', function($scope) {
         $scope.c_name = "John Doe";
@@ -23,5 +185,41 @@
         $scope.normal_price ="5000";
     });
 </script>
+ <script src="/js/plugins/layer/laydate/laydate.js"></script>
+ <script>
+     //外部js调用
+     laydate({
+         elem: '#hello', //目标元素。由于laydate.js封装了一个轻量级的选择器引擎，因此elem还允许你传入class、tag但必须按照这种方式 '#id .class'
+         event: 'focus' //响应事件。如果没有传入event，则按照默认的click
+     });
+
+     //日期范围限制
+     var start = {
+         elem: '#start',
+         format: 'YYYY/MM/DD hh:mm:ss',
+         min: laydate.now(), //设定最小日期为当前日期
+         max: '2099-06-16 23:59:59', //最大日期
+         istime: true,
+         istoday: false,
+         choose: function (datas) {
+             end.min = datas; //开始日选好后，重置结束日的最小日期
+             end.start = datas //将结束日的初始值设定为开始日
+         }
+     };
+     var end = {
+         elem: '#end',
+         format: 'YYYY/MM/DD hh:mm:ss',
+         min: laydate.now(),
+         max: '2099-06-16 23:59:59',
+         istime: true,
+         istoday: false,
+         choose: function (datas) {
+             start.max = datas; //结束日选好后，重置开始日的最大日期
+         }
+     };
+     laydate(start);
+     laydate(end);
+ </script>
+
 </body>
 </html>
