--- a/src/main/web/user/index.html
+++ b/src/main/web/user/index.html
@@ -100,6 +100,10 @@
                     <li>
                         <a href="#"><i class="fa fa-edit"></i> <span class="nav-label">表单</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
+                            <li><a class="J_menuItem" href="datagrid.html">用户管理</a></li>
+                            <li><a class="J_menuItem" href="datagridComm.html">商品管理</a></li>
+                            <li><a class="J_menuItem" href="datagridOrder.html">订单管理</a></li>
+
                             <li><a class="J_menuItem" href="form_basic.html">基本表单</a>
                             </li>
                             <li><a class="J_menuItem" href="form_validate.html">表单验证</a>
