--- a/src/main/web/user/social_feed.html
+++ b/src/main/web/user/social_feed.html
@@ -11,11 +11,11 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
 
-    <link rel="shortcut icon" href="favicon.ico"> <link href="css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
-    <link href="css/font-awesome.css?v=4.4.0" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico"> <link href="/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
+    <link href="/css/font-awesome.css?v=4.4.0" rel="stylesheet">
 
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="css/style.css?v=4.1.0" rel="stylesheet">
+    <link href="/css/animate.css" rel="stylesheet">
+    <link href="/css/style.css?v=4.1.0" rel="stylesheet">
 
 </head>
 
@@ -44,7 +44,7 @@
                     </div>
                     <div class="social-avatar">
                         <a href="" class="pull-left">
-                            <img alt="image" src="img/a1.jpg">
+                            <img alt="image" src="/img/a1.jpg">
                         </a>
                         <div class="media-body">
                             <a href="#">
@@ -67,7 +67,7 @@
                     <div class="social-footer">
                         <div class="social-comment">
                             <a href="" class="pull-left">
-                                <img alt="image" src="img/a1.jpg">
+                                <img alt="image" src="/img/a1.jpg">
                             </a>
                             <div class="media-body">
                                 <a href="#">
@@ -81,7 +81,7 @@
 
                         <div class="social-comment">
                             <a href="" class="pull-left">
-                                <img alt="image" src="img/a2.jpg">
+                                <img alt="image" src="/img/a2.jpg">
                             </a>
                             <div class="media-body">
                                 <a href="#">
@@ -95,7 +95,7 @@
 
                         <div class="social-comment">
                             <a href="" class="pull-left">
-                                <img alt="image" src="img/a3.jpg">
+                                <img alt="image" src="/img/a3.jpg">
                             </a>
                             <div class="media-body">
                                 <textarea class="form-control" placeholder="填写评论..."></textarea>
@@ -118,7 +118,7 @@
                     </div>
                     <div class="social-avatar">
                         <a href="" class="pull-left">
-                            <img alt="image" src="img/a6.jpg">
+                            <img alt="image" src="/img/a6.jpg">
                         </a>
                         <div class="media-body">
                             <a href="#">
@@ -134,7 +134,7 @@
                         <p>
                             介绍25个用来做新手引导的jQuery插件：
                         </p>
-                        <img src="img/p1.jpg" class="img-responsive">
+                        <img src="/img/p1.jpg" class="img-responsive">
                         <div class="btn-group">
                             <button class="btn btn-white btn-xs"><i class="fa fa-thumbs-up"></i> 赞</button>
                             <button class="btn btn-white btn-xs"><i class="fa fa-comments"></i> 评论</button>
@@ -144,7 +144,7 @@
                     <div class="social-footer">
                         <div class="social-comment">
                             <a href="" class="pull-left">
-                                <img alt="image" src="img/a1.jpg">
+                                <img alt="image" src="/img/a1.jpg">
                             </a>
                             <div class="media-body">
                                 <a href="#">
@@ -158,7 +158,7 @@
 
                         <div class="social-comment">
                             <a href="" class="pull-left">
-                                <img alt="image" src="img/a2.jpg">
+                                <img alt="image" src="/img/a2.jpg">
                             </a>
                             <div class="media-body">
                                 <a href="#">
@@ -172,7 +172,7 @@
 
                         <div class="social-comment">
                             <a href="" class="pull-left">
-                                <img alt="image" src="img/a8.jpg">
+                                <img alt="image" src="/img/a8.jpg">
                             </a>
                             <div class="media-body">
                                 <a href="#">
@@ -186,7 +186,7 @@
 
                         <div class="social-comment">
                             <a href="" class="pull-left">
-                                <img alt="image" src="img/a3.jpg">
+                                <img alt="image" src="/img/a3.jpg">
                             </a>
                             <div class="media-body">
                                 <textarea class="form-control" placeholder="填写评论..."></textarea>
@@ -209,7 +209,7 @@
                     </div>
                     <div class="social-avatar">
                         <a href="" class="pull-left">
-                            <img alt="image" src="img/a4.jpg">
+                            <img alt="image" src="/img/a4.jpg">
                         </a>
                         <div class="media-body">
                             <a href="#">
@@ -233,7 +233,7 @@
 
                         <div class="social-comment">
                             <a href="" class="pull-left">
-                                <img alt="image" src="img/a8.jpg">
+                                <img alt="image" src="/img/a8.jpg">
                             </a>
                             <div class="media-body">
                                 <a href="#">
@@ -247,7 +247,7 @@
 
                         <div class="social-comment">
                             <a href="" class="pull-left">
-                                <img alt="image" src="img/a3.jpg">
+                                <img alt="image" src="/img/a3.jpg">
                             </a>
                             <div class="media-body">
                                 <textarea class="form-control" placeholder="填写评论..."></textarea>
@@ -267,7 +267,7 @@
 
                     <div class="social-avatar">
                         <a href="">
-                            <img alt="image" src="img/a5.jpg">
+                            <img alt="image" src="/img/a5.jpg">
                         </a>
                     </div>
 
@@ -291,7 +291,7 @@
                             <p>
                                 新技术新概念很多，而且有了新定律：前端开发每18月会难一倍
                             </p>
-                            <img src="img/p2.jpg" class="img-responsive">
+                            <img src="/img/p2.jpg" class="img-responsive">
                             <div class="btn-group">
                                 <button class="btn btn-white btn-xs"><i class="fa fa-thumbs-up"></i> 赞</button>
                                 <button class="btn btn-white btn-xs"><i class="fa fa-comments"></i> 评论</button>
@@ -301,7 +301,7 @@
                         <div class="social-footer">
                             <div class="social-comment">
                                 <a href="" class="pull-left">
-                                    <img alt="image" src="img/a3.jpg">
+                                    <img alt="image" src="/img/a3.jpg">
                                 </a>
                                 <div class="media-body">
                                     <a href="#">
@@ -315,7 +315,7 @@
 
                             <div class="social-comment">
                                 <a href="" class="pull-left">
-                                    <img alt="image" src="img/a4.jpg">
+                                    <img alt="image" src="/img/a4.jpg">
                                 </a>
                                 <div class="media-body">
                                     <a href="#">
@@ -328,7 +328,7 @@
 
                                 <div class="social-comment">
                                     <a href="" class="pull-left">
-                                        <img alt="image" src="img/a7.jpg">
+                                        <img alt="image" src="/img/a7.jpg">
                                     </a>
                                     <div class="media-body">
                                         <a href="#">
@@ -342,7 +342,7 @@
 
                                 <div class="social-comment">
                                     <a href="" class="pull-left">
-                                        <img alt="image" src="img/a8.jpg">
+                                        <img alt="image" src="/img/a8.jpg">
                                     </a>
                                     <div class="media-body">
                                         <textarea class="form-control" placeholder="填写评论..."></textarea>
@@ -353,7 +353,7 @@
 
                             <div class="social-comment">
                                 <a href="" class="pull-left">
-                                    <img alt="image" src="img/a6.jpg">
+                                    <img alt="image" src="/img/a6.jpg">
                                 </a>
                                 <div class="media-body">
                                     <a href="#">
@@ -367,7 +367,7 @@
 
                             <div class="social-comment">
                                 <a href="" class="pull-left">
-                                    <img alt="image" src="img/a7.jpg">
+                                    <img alt="image" src="/img/a7.jpg">
                                 </a>
                                 <div class="media-body">
                                     <a href="#">
@@ -381,7 +381,7 @@
 
                             <div class="social-comment">
                                 <a href="" class="pull-left">
-                                    <img alt="image" src="img/a3.jpg">
+                                    <img alt="image" src="/img/a3.jpg">
                                 </a>
                                 <div class="media-body">
                                     <textarea class="form-control" placeholder="填写评论..."></textarea>
@@ -431,7 +431,7 @@
                         <div class="social-footer">
                             <div class="social-comment">
                                 <a href="" class="pull-left">
-                                    <img alt="image" src="img/a3.jpg">
+                                    <img alt="image" src="/img/a3.jpg">
                                 </a>
                                 <div class="media-body">
                                     <a href="#">
@@ -445,7 +445,7 @@
 
                             <div class="social-comment">
                                 <a href="" class="pull-left">
-                                    <img alt="image" src="img/a1.jpg">
+                                    <img alt="image" src="/img/a1.jpg">
                                 </a>
                                 <div class="media-body">
                                     <a href="#">
@@ -459,7 +459,7 @@
 
                             <div class="social-comment">
                                 <a href="" class="pull-left">
-                                    <img alt="image" src="img/a4.jpg">
+                                    <img alt="image" src="/img/a4.jpg">
                                 </a>
                                 <div class="media-body">
                                     <textarea class="form-control" placeholder="填写评论..."></textarea>
@@ -476,7 +476,7 @@
 
                     <div class="social-avatar">
                         <a href="">
-                            <img alt="image" src="img/a2.jpg">
+                            <img alt="image" src="/img/a2.jpg">
                         </a>
                     </div>
 
@@ -510,7 +510,7 @@
 
                             <div class="social-comment">
                                 <a href="" class="pull-left">
-                                    <img alt="image" src="img/a4.jpg">
+                                    <img alt="image" src="/img/a4.jpg">
                                 </a>
                                 <div class="media-body">
                                     <textarea class="form-control" placeholder="填写评论..."></textarea>
